start adding template structure

--- a/{{ cookiecutter.project_name | replace(' ', '') }}/.gitignore
+++ b/{{ cookiecutter.project_name | replace(' ', '') }}/.gitignore
@@ -19,8 +19,8 @@ xcuserdata/
 
 ## Other
 *.moved-aside
-*.xccheckout
-*.xcscmblueprint
+*.xcuserstate
+.DS_Store
 
 ## Obj-C/Swift specific
 *.hmap
@@ -36,7 +36,6 @@ playground.xcworkspace
 #
 # Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
 # Packages/
-# Package.pins
 .build/
 
 # CocoaPods
@@ -59,9 +58,12 @@ Carthage/Build
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
 # screenshots whenever they are needed.
 # For more information about the recommended setup visit:
-# https://docs.fastlane.tools/best-practices/source-control/#source-control
+# https://github.com/fastlane/fastlane/blob/master/fastlane/docs/Gitignore.md
 
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
-fastlane/test_output
+/app/fastlane/report.xml
+/app/fastlane/Preview.html
+/app/fastlane/screenshots
+/app/fastlane/test_output
+
+# This file is used to store private environment variables and should not be committed.
+.env
