adding fastlane, rxswift
- added fastlane base config
- added rxswift
- working on new structure
- added user defaults manager

--- a/PRODUCTNAME/app/Podfile
+++ b/PRODUCTNAME/app/Podfile
@@ -10,6 +10,8 @@ target 'PRODUCTNAME' do
   # pod 'KeychainAccess'
   # pod 'Marshal'
   pod 'SwiftLint'
+  pod 'RxSwift'
+  pod 'SwiftyUserDefaults'
 
   # pod 'BonMot'
   # pod 'Anchorage'
