- added SignIn Module WIP - added keychain access wrapper - added some extensions helpers - added some logic to on boarding and splash to forward to sign in

--- a/PRODUCTNAME/app/Podfile
+++ b/PRODUCTNAME/app/Podfile
@@ -13,6 +13,7 @@ target 'PRODUCTNAME' do
   pod 'SwiftyUserDefaults'
   pod 'Anchorage'
   pod 'Swiftilities'
+  pod 'KeychainAccess'
 
   target 'PRODUCTNAMETests' do
   	inherit! :search_paths
